cmake_minimum_required(VERSION 3.22)
project(test)

set(CMAKE_CXX_STANDARD 17)
#aux_source_directory(. DIR_SRCS)
include_directories(lib)
add_subdirectory(lib)

#message("${DIR_SRCS} ---------")
#add_executable(hello-server ${DIR_SRCS})
add_executable(hello-server hello-server.cpp)
add_executable(hello-client hello-client.cpp)
add_executable(low-open low-open.cpp)
add_executable(endian-conv endian-conv.cpp)
add_executable(ip-to-addr ip-to-addr.cpp)
add_executable(echo-server echo-server.cpp)
add_executable(echo-client echo-client.cpp)